Fix drag with overflow issue

--- a/assets/css/admin/cms/navigations.css
+++ b/assets/css/admin/cms/navigations.css
@@ -115,7 +115,7 @@
 	z-index: 0;
 }
 
-.n-columns-view .n-column .n-items .n-item {
+.n-columns-view .n-item {
 
 	background: #eeeeee;
 	height: 30px;
@@ -128,7 +128,7 @@
 	cursor: hand;
 }
 
-.n-columns-view .n-column .n-items .n-item.uk-active {
+.n-columns-view .n-item.uk-active {
 	
 	color: #fff;
 	background: #35B3EE;
@@ -136,7 +136,7 @@
 	border-bottom: 1px solid #35B3EE;
 }
 
-.n-columns-view .n-column .n-items .n-item:not(.uk-active).n-drilling-down {
+.n-columns-view .n-item:not(.uk-active).n-drilling-down {
 	
 	color: #fff;
 	background: #555;
@@ -144,18 +144,18 @@
 	border-bottom: 1px solid #555; 
 }
 
-.n-columns-view .n-column .n-items .n-item:first-child {
+.n-columns-view .n-item:first-child {
 
 	border-top: 1px solid #cdcdcd;
 }
 
-.n-columns-view .n-column .n-items .n-item:not(.uk-active):not(.n-drilling-down):hover {
+.n-columns-view .n-item:not(.uk-active):not(.n-drilling-down):hover {
 
 	background: #d8d8d8;
 	border-top: 1px solid #dedede; 
 }
 
-.n-columns-view .n-column .n-items .n-item:not(.uk-active):not(.n-drilling-down):first-child:hover {
+.n-columns-view .n-item:not(.uk-active):not(.n-drilling-down):first-child:hover {
 
 	background: #d8d8d8;
 	border-top: 1px solid #cdcdcd;
